<resources>
    <string name="app_name">My Application</string>
    <string name="app_string_recipe">开处方</string>
    <string name="app_string_back">返回</string>
    <string name="app_string_recipe1">处方</string>
    <string name="app_string_save">保存</string>
    <string name="app_string_again">重新提交</string>
    <string name="app_confirm_recipe">确认处方</string>
    <string name="string_sympton">主诉</string>
    <string name="string_diagnosis">诊断</string>
    <string name="string_drug">药品</string>
    <string name="string_diagnosis_hint">请输入诊断名称</string>
    <string name="string_diagnosis_desc_hint">请输入诊断描述</string>
    <string name="string_diagnosis_name">诊断名称</string>
    <string name="string_diagnosis_detail">详细描述</string>
    <string name="string_drug_detail">处方详情</string>
    <string name="string_add">继续添加</string>
    <string name="string_add1">添加</string>
    <string name="string_delete">删除</string>
    <string name="string_total">合计:</string>
    <string name="string_usage">用法</string>
    <string name="string_zhutuo">嘱托</string>
    <string name="string_usagea">药品用法</string>
    <string name="string_parm_remind">开处方时，必须包含诊断</string>
    <string name="string_parm_remind1">开处方时，必须包含药品</string>
    <string name="string_parm_remind2">确认处方时，必须包含诊断</string>
    <string name="string_parm_remind3">必须包含至少一种药品</string>
    <string name="string_wait">正在加载数据，请稍候</string>
    <string name="string_wait_cndrug">正在加载中药数据，请稍候</string>
    <string name="string_wait_endrug">正在加载西药数据，请稍候</string>
    <string name="string_wait_save">正在保存数据，请稍候</string>
    <string name="string_wait_bjca">正在同步处方，请稍候</string>
    <string name="string_send_recipe">正在重新提交处方，请稍候</string>
    <string name="string_refuse_recipe">正在驳回处方，请稍候</string>
    <string name="string_add_recipe">新增处方</string>
    <string name="string_modify_recipe">编辑处方</string>
    <string name="string_recipename">处方名称</string>
    <string name="string_recipe_name_remind">处方名称不能为空！</string>
    <string name="string_recipe_name_remind1">请把药品内容填写完整！</string>
    <string name="string_recipe_name_remind1a">药品数量必须大于0！</string>
    <string name="string_recipe_name_remind2">请把诊断内容填写完整！</string>
    <string name="string_recipe_name_remind3">请选择制法！</string>
    <string name="string_recipe_name_remind4">请选择频率！</string>
    <string name="string_recipe_name_remind5">请选择用法！</string>
    <string name="string_recipe_name_remind6">每几日，必须大于0！</string>
    <string name="string_recipe_name_remind7">每日几剂频率，必须大于0且小于10！</string>
    <string name="string_recipe_name_remind8">分几次服用，必须大于0且小于10！</string>
    <string name="string_recipe_name_remind9">处方剂数，必须大于0！</string>
    <string name="string_recipe_name_remind10">几煎，必须大于0且小于10！</string>
    <string name="string_recipe_name_remind11">煎药前水量，必须大于0且小于9999！</string>
    <string name="string_recipe_name_remind12">煎药后水量，必须大于0且小于9999！</string>
    <string name="string_recipe_name_remind13">煎前水量必须大于煎后水量！</string>
    <string name="back_to_home">返回</string>
    <string name="string_druglist_title">常用处方</string>
    <string name="string_druglist_add">增加</string>
    <string name="string_druglist_man">管理</string>
    <string name="string_druglist_type">处方类型</string>
    <string name="string_druglist_cn">中药处方</string>
    <string name="string_druglist_en">西药处方</string>
    <string name="string_druglist_query">查找</string>
    <string name="string_druglist_drugname">药名</string>
    <string name="string_druglist_dose">剂量</string>
    <string name="string_druglist_usage">用法用量</string>
    <string name="string_druglist_sp">规格</string>
    <string name="string_druglist_updatetime">更新时间：</string>
    <string name="string_recipe_dialog">是否删除该处方?</string>
    <string name="string_exit_yes">确认</string>
    <string name="string_exit_no">取消</string>
    <string name="string_delete_success">处方删除成功！</string>
    <string name="string_store">药店名称&#160;&#160;</string>
    <string name="string_patient_name">就诊人&#160;&#160;</string>
    <string name="string_amount">金额&#160;&#160;</string>
    <string name="string_dealtime">处方时间&#160;&#160;</string>
    <string name="string_sex">性别&#160;&#160;</string>
    <string name="string_recipe_age">年龄&#160;&#160;</string>
    <string name="string_yuan">元</string>
    <string name="string_recipe_yes">提交</string>
    <string name="string_recipe_no">驳回</string>
    <string name="string_ds_diagnosis">临床诊断</string>
    <string name="string_recipe_cn">中药处方</string>
    <string name="string_recipe_en">西药处方</string>
    <string name="string_drug_name">药品名称</string>
    <string name="string_drug_name1">药名</string>
    <string name="string_unit1">盒</string>
    <string name="string_unit2">袋</string>
    <string name="string_unit3">频率</string>
    <string name="string_unit4">规格</string>
    <string name="string_unit4a">药品规格</string>
    <string name="string_unit5">剂量</string>
    <string name="string_unit5a">用药剂量</string>
    <string name="string_unit5b">数量</string>
    <string name="string_unit5c">用量</string>
    <string name="string_unit6">剂数</string>
    <string name="string_unit6a">计费剂数</string>
    <string name="string_unit7">共</string>
    <string name="string_unit8">剂</string>
    <string name="string_unit9">计费数量</string>
    <string name="string_unit10">用药途径</string>
    <string name="string_unit11">用药频率</string>
    <string name="string_unit12">用药方法</string>
    <string name="string_unit13">代煎</string>
    <string name="string_unit14">制法</string>
    <string name="string_unit15">煎</string>
    <string name="string_unit16">清水</string>
    <string name="string_unit17">煎至</string>
    <string name="string_unit18">毫升</string>
    <string name="string_unit19">每</string>
    <string name="string_unit20">日</string>
    <string name="string_unit21">剂</string>
    <string name="string_unit22">分</string>
    <string name="string_unit23">次服</string>
    <string name="string_unit_total">小计：</string>
    <string name="string_price">价格：</string>
    <string name="string_save_remind1">主诉不能为空</string>
    <string name="string_save_remind2">请把中药处方里的内容填写完整</string>
    <string name="string_save_remind3">请把西药处方里的内容填写完整</string>
    <string name="string_save_remind4">诊断或药品信息内容不正确</string>
    <string name="save_recipe_success">处方发送成功！</string>
    <string name="failed">处方发送失败</string>
    <string name="string_freq1">QD 每日一次</string>
    <string name="string_freq2">BID 每日两次</string>
    <string name="string_freq3">TID 每日三次</string>
    <string name="string_freq4">QID 每日四次</string>
    <string name="string_freq5">ST. 立即</string>
    <string name="string_freq6">连续</string>
    <string name="string_freq7">HS 睡前</string>
    <string name="string_freq8">SOS 需要时</string>
    <string name="string_freq9">PRN 必要时</string>
    <string name="string_freq10">Q1/2H 半小时一次</string>
    <string name="string_freq11">Qn 每小时一次</string>
    <string name="string_freq12">Q2H 2小时一次</string>
    <string name="string_freq13">Q3H 3小时一次</string>
    <string name="string_freq14">Q4h 4小时一次</string>
    <string name="string_freq15">Q6h 6小时一次</string>
    <string name="string_freq16">Q8h 8小时一次</string>
    <string name="string_freq17">Q12h 12小时一次</string>
    <string name="string_freq18">QM 早晨一次</string>
    <string name="string_freq19">QN 晚上一次</string>
    <string name="string_freq20">QW 每周一次</string>
    <string name="string_freq21">BIW 每周二次</string>
    <string name="string_freq22">QOD 隔日一次</string>
    <string name="string_freq23">Q3D 3天一次</string>
    <string name="string_freq24">Q4D 4天一次</string>
    <string name="string_freq25">Q5D 5天一次</string>
    <string name="string_freq26">频率</string>
    <string name="string_route1">口服</string>
    <string name="string_route2">含服</string>
    <string name="string_route3">煎服</string>
    <string name="string_route4">外用加棉签</string>
    <string name="string_route5">舌下含服</string>
    <string name="string_route6">眼用</string>
    <string name="string_route7">滴耳</string>
    <string name="string_route8">吸入</string>
    <string name="string_route9">滴鼻</string>
    <string name="string_route10">含漱</string>
    <string name="string_route11">外用</string>
    <string name="string_route12">喷喉</string>
    <string name="string_route13">吸氧</string>
    <string name="string_route14">吸痰</string>
    <string name="string_route15">雾化吸入</string>
    <string name="string_route16">涂口腔</string>
    <string name="string_route17">塞肛</string>
    <string name="string_route18">阴道给药</string>
    <string name="string_route19">洗口腔</string>
    <string name="string_route20">途径</string>
    <string name="string_enunit1">片</string>
    <string name="string_enunit2">粒</string>
    <string name="string_enunit3">袋</string>
    <string name="string_enunit4">ml</string>
    <string name="string_enunit5">g</string>
    <string name="string_enunit6">丸</string>
    <string name="string_enunit7">支</string>
    <string name="string_enunit8">瓶</string>
    <string name="string_enunit9">盒</string>
    <string name="string_enunit10">mg</string>
    <string name="string_enunit11">克</string>
    <string name="string_enunit12">包</string>
    <string name="string_enunit13">kg</string>
    <string name="string_enunit14">合</string>
    <string name="string_enunit15">贴</string>
    <string name="string_enunit16">罐</string>
    <string name="string_enunit17">条</string>
    <string name="string_enunit18">台</string>
    <string name="string_enunit19">个</string>
    <string name="string_enunit20">卷</string>
    <string name="string_enunit21">只</string>
    <string name="string_enunit22">套</string>
    <string name="string_enunit23">提</string>
    <string name="string_enunit24">枚</string>
    <string name="string_enunit25">扎</string>
    <string name="string_enunit26">小盒</string>
    <string name="string_enunit27">板</string>
    <string name="string_enunit28">对</string>
    <string name="string_enunit29">付</string>
    <string name="string_enunit30">根</string>
    <string name="string_enunit31">块</string>
    <string name="string_enunit32">斤</string>
    <string name="string_enunit33">小丸</string>
    <string name="string_enunit34">小包</string>
    <string name="string_enunit35">小袋</string>
    <string name="string_enunit36">排</string>
    <string name="string_enunit37">塑瓶</string>
    <string name="string_cnunit1">g</string>
    <string name="string_cnunit2">克</string>
    <string name="string_cnunit3">片</string>
    <string name="string_cnunit4">瓶</string>
    <string name="string_cnunit5">kg</string>
    <string name="string_cnunit6">粒</string>
    <string name="string_cnunit7">袋</string>
    <string name="string_cnunit8">包</string>
    <string name="string_cnunit9">条</string>
    <string name="string_cnunit10">支</string>
    <string name="string_cnunit11">盒</string>
    <string name="string_cnunit12">个</string>
    <string name="string_cnunit13">根</string>
    <string name="string_cnunit14">对</string>
    <string name="string_cnunit15">10G</string>
    <string name="string_cnunit16">丸</string>
    <string name="string_cnunit17">扎</string>
    <string name="string_zhifa1">请选择</string>
    <string name="string_zhifa2">水煎</string>
    <string name="string_usage1">请选择</string>
    <string name="string_usage2">外用</string>
    <string name="string_usage3">内用</string>
    <string name="string_male">男</string>
    <string name="string_female">女</string>
    <string name="string_Sympton">主诉</string>
    <string name="string_Sympton_hint">请输入患者主诉</string>
    <string name="string_PastMedicalHistory">既往病史</string>
    <string name="string_PastMedicalHistory_hint">请输入既往病史</string>
    <string name="string_PresentHistoryIllness">现病史</string>
    <string name="string_PresentHistoryIllness_hint">请输入现病史</string>
    <string name="string_AllergicHistory">过敏史</string>
    <string name="string_AllergicHistory_hint">请输入过敏史</string>
    <string name="string_Advised">治疗意见</string>
    <string name="string_Advised_hint">请输入治疗意见</string>
    <string name="string_chubu">初步诊断</string>
    <string name="string_chubu_hint">请输入初步诊断</string>
</resources>