<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_en"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">


    <LinearLayout
        android:id="@+id/ll_cndrug_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/string_drug_name"
            android:textColor="@color/color_main_string"
            android:textSize="@dimen/big_font_size"/>

        <doctor.kmwlyy.com.recipe.View.DrugAutoCompleteTextView
            android:id="@+id/et_cndrug_name"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/color_main_string"
            android:background="@drawable/et_shape"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cndrug_item"
        android:layout_below="@+id/ll_cndrug_name"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="30dp"
        android:gravity="center_vertical|right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:textColor="@color/color_main_string"
            android:text="@string/string_unit4"
            android:textSize="@dimen/big_font_size"/>

        <TextView
            android:id="@+id/tv_Specification"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:background="@drawable/tv_shape"
            android:textColor="@color/color_main_string"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="                 "
            android:textSize="@dimen/big_font_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/string_unit5"
            android:textColor="@color/color_main_string"
            android:textSize="@dimen/big_font_size"/>

        <doctor.kmwlyy.com.recipe.View.MyEditView
            android:id="@+id/et_dose"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:textColor="@color/color_main_string"
            android:inputType="numberDecimal"
            android:background="@drawable/et_shape"/>

        <TextView
            android:id="@+id/tv_doseunit"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/tv_shape"
            android:text="   "
            android:textColor="@color/color_main_string"
            android:textSize="@dimen/big_font_size"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_subtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_cndrug_item"
        android:gravity="right">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/big_font_size"
            android:text="@string/string_unit_total"
            android:textColor="@color/color_main_string"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/tv_cndrug_subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/big_font_size"
            android:layout_below="@+id/ll_cndrug_item"
            android:layout_alignParentRight="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_subtotal"
        android:gravity="right">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_add"
            android:textColor="@color/color_main_string"
            android:visibility="gone"
            android:textSize="@dimen/big_font_size"
            android:text="@string/string_add"/>
        <doctor.kmwlyy.com.recipe.View.MyDeleteTextView
            android:id="@+id/tv_delete"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_delete"
            android:textColor="@color/color_main_string"
            android:textSize="@dimen/big_font_size"
            android:text="@string/string_delete"/>
    </LinearLayout>
</RelativeLayout>
